syntax = "proto3";

import "lte/gateway/c/oai/protos/3gpp_types.proto";
import "lte/gateway/c/oai/protos/common_types.proto";
import "lte/gateway/c/oai/protos/nas_state.proto";
import "lte/gateway/c/oai/protos/spgw_state.proto";

package magma.lte;

// sgs_context_t
message SgsContext {
  // TODO
}

/*****************************************************************/
/*                     messages for MME                          */
/*****************************************************************/
// bearer_context_t
message BearerContext {
  uint32 ebi = 1; // ebi_t
  uint32 transaction_identifier = 2; // proc_tid_t
  Fteid s_gw_fteid_s1u = 3; // fteid_t
  Fteid p_gw_fteid_s5_s8_up = 4; // fteid_t
  uint32 qci = 5; // qci_t

  uint32 pdn_cx_id = 6; // pdn_cid_t
  uint32 bearer_state = 7; // mme_app_bearer_state_t
  EsmEbrContext esm_ebr_context = 8;
  Fteid enb_fteid_s1u = 9;

  uint32 priority_level = 10; // priority_level_t
  uint32 preemption_vulnerability = 11;
  uint32 preemption_capability = 12;
  gateway.spgw.TrafficFlowTemplate saved_tft = 13;
  BearerQos saved_qos = 14;
  enum Validity {
    INVALID = 0;
    VALID = 1;
  }
  Validity validity = 15;
}

// esm_pdn_t
message EsmPdn {
  uint32 pti = 1;
  bool is_emergency = 2;
  uint32 ambr = 3;
  uint32 addr_realloc = 4;
  uint32 n_bearers = 5;
  uint32 pt_state = 6; // esm_pt_state_e enum
}

// pdn_context_t
message PdnContext {
  uint32 context_identifier = 1; // context_identifier_t
  string apn_in_use = 2;
  string apn_subscribed = 3;
  uint32 pdn_type = 4; // pdn_type_t
  bytes paa = 5; // paa_t
  string apn_oi_replacement = 6;
  string p_gw_address_s5_s8_cp = 7; // ip_address_t
  uint32 p_gw_teid_s5_s8_cp = 8; // teid_t
  EpsSubscribedQosProfile default_bearer_qos_profile = 9;
  Ambr subscribed_apn_ambr = 10;
  Ambr p_gw_apn_ambr = 11;
  uint32 default_ebi = 12; // ebi_t
  repeated uint32 bearer_contexts = 13;
  string s_gw_address_s11_s4 = 14; // ip_address_t
  uint32 s_gw_teid_s11_s4 = 15;
  EsmPdn esm_data = 16;
  bool is_active = 17;
  ProtocolConfigurationOptions pco = 18;
}

// ue_mm_context_t
message UeContext {
  uint64 imsi = 1;
  uint32 imsi_len = 2;
  uint32 member_present_mask = 3;
  IdentityTuple imeisv = 4; // imeisv_t
  string msisdn = 5;

  uint32 imsi_auth = 6;
  uint32 rel_cause = 7; //enum s1cause
  uint32 mm_state = 8; // mm_state_t
  uint32 ecm_state = 9; // ecm_state_t

  EmmContext emm_context = 10;
  uint32 sctp_assoc_id_key = 11;
  uint32 enb_ue_s1ap_id = 12;
  uint64 enb_s1ap_id_key = 13;
  uint32 mme_ue_s1ap_id = 14;
  uint32 attach_type = 15;
  uint32 detach_type = 16;

  // Location information
  Tai serving_cell_tai = 20;
  TaiList tai_list = 21;
  Tai tai_last_tau = 22;
  Ecgi e_utran_cgi = 23;
  uint64 cell_age = 24;
  uint32 tau_updt_type = 25;
  bytes lai = 26; // lai_t

  // PDN information
  ApnConfigProfile apn_config = 30;
  uint32 sub_status = 31; // subscriber_status_t
  uint32 subscriber_status = 32; // subscriber_status_t
  uint32 network_access_mode = 33; // network_access_mode_t
  uint32 access_restriction_data = 34; // ard_t
  string apn_oi_replacement = 35;
  uint32 mme_teid_s11 = 36; // teid_t
  Ambr subscribed_ue_ambr = 37; //ambr_t
  Ambr used_ue_ambr = 38; // ambr_t
  Ambr used_ambr = 39; //ambr_t
  uint32 nb_active_pdn_contexts = 40;
  repeated PdnContext pdn_contexts = 41; //pdn_context_t
  repeated BearerContext bearer_contexts = 42; // bearer_context_t
  string ue_radio_capability = 43;

  // flags
  bool send_ue_purge_request = 60;
  bool hss_initiated_detach = 61;
  bool location_info_confirmed_in_hss = 62;
  bool ppf = 63;
  bool subscription_known = 64;
  bool path_switch_req = 65;

  // CSFB
  uint32 granted_service = 100; // granted_service_t
  uint32 cs_fallback_indicator = 101;
  SgsContext sgs_context = 102;

  Timer mobile_reachability_timer = 200;
  Timer implicit_detach_timer = 201;
  Timer initial_context_setup_rsp_timer =202;
  Timer ue_context_modification_timer = 203;
  Timer paging_response_timer = 204;
  uint32 rau_tau_timer = 205;
  Timer ulr_response_timer = 206;
}

// mme_ue_context_t
message MmeUeContext {
  uint32 nb_ue_managed = 1;
  uint32 nb_ue_idle = 2;
  uint32 nb_bearers_managed = 3;

  map<uint64, uint64> imsi_ue_id_htbl = 4;  // imsi -> mme_ue_id
  map<uint64, uint64> tun11_ue_id_htbl = 5; // tun_id -> mme_ue_id
  map<uint64, UeContext> mme_ue_id_ue_ctxt_htbl = 6; // mme_ue_id -> ue_context
  map<uint64, uint64> enb_ue_id_ue_id_htbl = 7; // enb_ue_id -> mme_ue_id
  map<string, uint64> guti_ue_id_htbl = 8; // guti -> mme_ue_id

  uint32 nb_ue_since_last_stat = 9; //TODO: remove
  uint32 nb_bearers_since_last_stat = 10; //TODO: remove
}

// mme_app_desc_t
message MmeNasState {
  MmeUeContext mme_ue_contexts = 1; // mme_ue_context_t
  uint32 nb_enb_connected = 2;
  uint32 nb_ue_attached = 3;
  uint32 nb_ue_connected = 4;
  uint32 nb_default_eps_bearers = 5;
  uint32 nb_s1u_bearers = 6;
  uint64 statistic_timer_id = 7;
}
